20121206 - fhabermann
* initial version of tinymce