@@ -1,2 +1,3 @@
 20121206 - fhabermann
 * initial version of tinymce
+* using abstract rte class for tinymce
